# Fechatter

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURAL_FIXES_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Cargo_test.toml  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.fechatter-server-only  Dockerfile.fly  Dockerfile.local  Dockerfile.remote  Dockerfile.server  FRONTEND_CHANNELLIST_ANALYSIS.md  FRONTEND_CHANNELLIST_FIX_SUMMARY.md  LICENSE  Makefile  Makefile.bak  Makefile.docker  Makefile.local  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PROBLEM_SOLUTIONS.md  QUICK_START_MANUAL.md  README.ja.md  README.md  README.zh-CN.md  REFACTORING_SUMMARY.md  ROADMAP.md  RUST_ERROR_RESOLUTION_KNOWLEDGE_BASE.md  Shuttle.toml  UNIFIED_EVENT_ARCHITECTURE_SUMMARY.md  X86_CROSS_COMPILATION_GUIDE.md  X86_DEPLOYMENT_GUIDE.md  _typos.toml  analytics_json_proxy.py  (+75 more)
analytics_server/: Cargo.toml  README.md  build.rs  swagger-ui.html
analytics_server/examples/: db.rs  fechatter_sender.rs  sender.rs
analytics_server/src/: config.rs  error.rs  events.rs  extractors.rs  handlers.rs  json_handlers.rs  lib.rs  main.rs  nats_subscriber.rs  openapi.rs
analytics_server/src/observability/: metrics.rs  mod.rs
analytics_server/src/pb/: fechatter.v1.rs  mod.rs
bot_server/: Cargo.toml  README.md  bot.yml
bot_server/src/: analytics_unified.rs  config.rs  health.rs  indexer.rs  lib.rs  notif.rs  server.rs
bot_server/src/observability/: metrics.rs  mod.rs
fechatter_core/: Cargo.toml  lib.rs
fechatter_core/rfcs/: ARCHITECTURE.md  REPOSITORY_IMPLEMENTATION.md  TESTING.md
fechatter_core/src/: TESTING.md  error.rs  jwt.rs  lib.rs  state.rs
fechatter_core/src/contracts/: events.rs  infrastructure.rs  mod.rs  repositories.rs  services.rs
fechatter_core/src/middlewares/: bearer_auth.rs  builder.rs  custom_builder.rs  mod.rs  mw_traits.rs  query_token_auth.rs  request_id.rs  token_refresh.rs  workspace.rs
fechatter_core/src/models/: chat.rs  chat_member.rs  file.rs  ids.rs  jwt.rs  message.rs  mod.rs  time_management.rs  user.rs  vector_db.rs  workspace.rs
fechatter_core/src/services/: auth_service.rs  mock.rs  mod.rs  retry.rs  service_provider.rs  workspace_service.rs
fechatter_core/src/utils/: jwt.rs  mock.rs  mod.rs  retry.rs  test_helpers.rs
fechatter_gateway/: ACTUAL_ROUTE_STATUS.md  AUTHENTICATION_ARCHITECTURE.md  Cargo.toml  Dockerfile.test  FINAL_SUMMARY.md  README.md  ROUTE_MAPPING.md  ROUTING_FIX_SUMMARY.md  gateway.yml
fechatter_gateway/config/: development.yml  gateway-ha.yml  production.yml
fechatter_gateway/src/: config.rs  health.rs  lib.rs  main.rs  upstream.rs
fechatter_gateway/src/proxy/: audit.rs  cache.rs  mod.rs  production.rs
fechatter_gateway/templates/: welcome.html
fechatter_gateway/tests/: integration_tests.rs
fechatter_server/: CONFIG.md  Cargo.toml  app.yml  chat.yml  environment.example  settings.toml  test.rest
fechatter_server/benches/: message_processing.rs
fechatter_server/docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FIX.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  NAMING_CONVENTIONS.md  PERFORMANCE_GUIDE.md  README.md  RUST_STYLE_GUIDE.md  USAGE_GUIDE.md  config.example.toml  fechatter.example.toml
fechatter_server/examples/: ai_integration_example.rs  event_publisher_demo.rs  simple_ai_demo.rs
fechatter_server/frontend/: index.html  script.js
fechatter_server/migrations/: 0001_initial_schema.sql  0002_trigger.sql  0003_refresh_tokens.sql  0006_add_idempotency_key.sql
fechatter_server/proto/: fechatter.proto
fechatter_server/rfcs/:  template_copy.md
fechatter_server/src/: REFACTOR_PLAN.md  config.rs  error.rs  lib.rs  lib.rs.backup  macros.rs  main.rs  migration.rs  migrations.rs  openapi.rs  state.rs  test_utils.rs
fechatter_server/src/domains/: mod.rs
fechatter_server/src/dtos/: bot.rs  mod.rs
fechatter_server/src/fixtures/: decoding.pem  encoding.pem
fechatter_server/src/handlers/: auth.rs  bot.rs  cache_stats.rs  chat.rs  chat_member.rs  chat_members.rs  files.rs  health.rs  login_monitor.rs  messages.rs  messages_validated.rs  mod.rs  production_health.rs  realtime.rs  realtime_fixed.rs  search.rs  users.rs  workspace.rs  workspaces.rs
fechatter_server/src/middlewares/: audit_logging.rs  authorization.rs  bearer_auth.rs  builder.rs  builder_test.rs  business_middleware.rs  chat.rs  compat.rs  enhanced_business_middleware.rs  middleware_utils.rs  mod.rs  permission_checker.rs  permissions.rs  request_context.rs  request_id.rs  server_time.rs  token_refresh.rs  workspace.rs
fechatter_server/src/models/: chat.rs  chat_member.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
fechatter_server/src/services/: auth_service.rs  event_publisher.rs  indexer_sync_service.rs  mod.rs  search_service.rs  service_provider.rs  workspace_service.rs
fechatter_server/src/tests/: auth_service_test.rs  auth_tests.rs  change_password_test.rs  macros.rs  middleware_tests.rs  mod.rs  redis_integration_test.rs  refresh_token.rs  (+7 more)
fechatter_server/tests/: process_file.rs  refresh_token.rs  token_validator.rs
fechatter_tests/: Cargo.toml  README.md  chat.yml  notify.yml
fechatter_tests/src/: api_tests.rs  auth_integration_test.rs  auth_tests.rs  common.rs  database_tests.rs  file_tests.rs  lib.rs  nats_tests.rs  notification_tests.rs  search_tests.rs  stress_tests.rs  workspace_tests.rs
fechatter_tests/tests/: auth_integration_test.rs  chat_integration_test.rs  chats.rs  server_integration_test.rs
notify_server/: Cargo.toml  Dockerfile.server-only  index.html  notify.example.yml  notify.minimal.yml  notify.yml  notify_local.yml
notify_server/rfcs/: ANALYTICS_TESTING.md  NOTIFY_SERVER_ARCHITECTURE.md  NOTIFY_SERVER_IMPLEMENTATION.md
notify_server/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  nats_subscriber.rs  notify.rs  sse.rs  utils.rs
notify_server/tests/: integration_test.rs
swiftide-pgvector/: Cargo.toml
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
(+1008 files in other folders)
