[workspace]
members = ["fechatter_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = [
  "full",
  "macros",
  "rt",
  "rt-multi-thread",
] }
axum = { version = "0.8.1", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  # "macros"
] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono"
] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
