[workspace]
members = ["fechatter_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.44", features = [
  "full",
  "macros",
  "rt",
  "rt-multi-thread",
] }
axum = { version = "0.8.3", features = ["http2", "query", "tracing", "multipart", "tower-log"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
sqlx = { version = "0.8.5", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono"
] }
uuid = { version = "1.4", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
tower = { version = "0.5.2", features = ["util"] }
tower-service = "0.3"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace"] }
rodio = "0.17"
