[workspace]
members = ["fechatter_core", "fechatter_server", "notify_server", "fechatter_tests", "fechatter_macro"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = [
  "full",
  "macros",
  "rt",
  "rt-multi-thread",
  "fs",
  "io-util",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = { version = "0.8.3", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  "tower-log",
  "macros",
] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "macros"] }
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonwebtoken = "9.1"
futures = "0.3"
tower = { version = "0.5.2", features = ["util"] }
tower-service = "0.3"
tower-http = { version = "0.6.2", features = [
  "compression-full",
  "cors",
  "trace",
] }
argon2 = { version = "0.5", features = ["std"] }
rodio = "0.20.1"
sha1 = "0.10.6"
sha2 = "0.10.7"
hex = "0.4.3"
rand = "0.9.1"
dashmap = { version = "6.1.0" }

utoipa = { version = "5.3.1", features = ["uuid", "chrono", "axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

fechatter_core = { path = "./fechatter_core" }
fechatter_server = { path = "./fechatter_server" }
notify_server = { path = "./notify_server" }
fechatter_macro = { path = "./fechatter_macro" }



