[package]
name = "analytics_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "analytics_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.41.0"
async-trait = { workspace = true }
axum = { workspace = true }
fechatter_core = { workspace = true }
fechatter_protos = { workspace = true }
chrono = { workspace = true }
clickhouse = "0.13.0"
dashmap = { workspace = true }
futures = { workspace = true }
prost = "0.14.0"
prost-types = "0.14.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
# Metrics
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"

[build-dependencies]
prost-build = "0.14.0"

[dev-dependencies]
reqwest = { workspace = true }
