[package]
name = "fechatter_server"
version = "0.1.0"
edition = "2024"

[features]
test-util = ["dep:sqlx-db-tester", "dep:http-body-util"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
async-trait = {workspace = true }
dashmap = { workspace = true }
dotenv = "0.15"
once_cell = "1.18.0"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
http-body-util = { version = "0.1.3", optional = true }
hyper = "1.6.0"
bytes = "1.10.1"
mockall = { version = "0.13.1", default-features = false }
fechatter_core = { workspace = true }
fechatter_macro = { path = "../fechatter_macro" }
sqlx-db-tester = { version = "0.6.0", optional = true }
tempfile = "3.3"

[dev-dependencies]
tempfile = "3.3"
fechatter_server = { workspace = true, features = ["test-util"] }

