[package]
name = "fechatter_server"
version = "0.1.0"
edition = "2024"

[features]
test-util = ["dep:sqlx-db-tester", "dep:http-body-util"]

[dependencies]
anyhow = { workspace = true }
axum.workspace = true
axum-extra = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-rapidoc = { workspace = true }
dotenv = "0.15"
once_cell = "1.18.0"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
http-body-util = { version = "0.1.3", optional = true }
hyper = "1.6.0"
bytes = "1.10.1"
mockall = { version = "0.13.1", default-features = false }
fechatter_core = { workspace = true }
fechatter_macro = { path = "../fechatter_macro" }
sqlx-db-tester = { version = "0.6.0", optional = true }
tempfile = "3.3"
async-nats = "0.41.0"
meilisearch-sdk = "0.28.0"
redis = { version = "0.31.0", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.18", features = ["json"] }
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "postgres"] }
hmac = "0.12.1"
aws-config = "1.6.3"
aws-sdk-s3 = "1.90.0"
aws-smithy-http = "0.62.1"
aws-credential-types = "1.2.3"
regex = "1.11.1"
toml = "0.8"

# Email notification dependencies
lettre = { version = "0.11", features = ["smtp-transport", "hostname", "tokio1-native-tls", "builder"] }
handlebars = "6.1.0"

[dev-dependencies]
tempfile = "3.3"
fechatter_server = { workspace = true, features = ["test-util"] }
