[package]
name = "fechatter_server"
version = "0.2.0"
edition = "2021"

[features]
test-util = ["dep:sqlx-db-tester", "dep:http-body-util"]

[dependencies]
anyhow = { workspace = true }
axum.workspace = true
axum-extra = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-rapidoc = { workspace = true }
dotenv = "0.15"
once_cell = "1.18.0"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
serde_qs = "0.15.0"
http-body-util = { version = "0.1.3", optional = true }
hyper = "1.6.0"
bytes = "1.10.1"
mockall = { version = "0.13.1", default-features = false }
fechatter_core = { workspace = true }
fechatter_protos = { workspace = true }
ai_sdk = { path = "../ai_sdk" }
tonic = "0.13"
# Removed fechatter_macro dependency as it's not used
# fechatter_macro = { path = "../fechatter_macro" }
sqlx-db-tester = { version = "0.6.0", optional = true }
tempfile = "3.3"
async-nats = "0.42.0"
meilisearch-sdk = "0.28.0"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12.18", features = [
  "json",
  "rustls-tls",
], default-features = false }
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "postgres"] }
# Query cache optimization dependencies
lru = "0.15.0"
parking_lot = "0.12.3"
smallvec = { version = "1.13.2", features = ["serde"] }
# Query processor dependencies
jieba-rs = "0.7.0"
unicode-segmentation = "1.10.1"
ahash = "0.8.11"
fuzzy-matcher = "0.3.7"
hmac = "0.12.1"
# Temporarily disabled to reduce build memory usage
# aws-config = "1.6.3"
# aws-sdk-s3 = "1.90.0"
# aws-smithy-http = "0.62.1"
# aws-credential-types = "1.2.3"
regex = "1.11.1"
toml = "0.8"

# Analytics support
analytics_server = { path = "../analytics_server" }
prost = "0.14"

# Email notification dependencies
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport",
  "hostname",
  "tokio1",
  "tokio1-rustls-tls",
  "rustls-native-certs",
  "ring",
  "builder",
] }
handlebars = "6.1.0"

# OpenTelemetry observability stack
opentelemetry = { version = "0.30", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.30"
opentelemetry-semantic-conventions = "0.30"
tracing-opentelemetry = "0.31"

# Redis
bb8 = "0.9"
bb8-redis = "0.24"

# metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
tracing-appender = "0.2"


eyre = "0.6"
color-eyre = "0.6"
rayon = "1.10.0"

# Hash utilities for cache keys

# AI and ML dependencies
# Note: These may need version updates based on your workspace
# AI dependencies (using reqwest for HTTP calls)
# cohere-ai = { version = "0.1", optional = true }
# huggingface-hub = { version = "0.3", optional = true }
# tokenizers = { version = "0.20", optional = true }

# Concurrency - crossbeam for lock-free data structures
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.3"
# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
cargo-flamegraph = "0.6"

[[bench]]
name = "message_processing"
harness = false

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "database_queries"
harness = false
