[package]
name = "fechatter_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }

# HTTP and API testing
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
axum = { workspace = true }
axum-extra = { workspace = true }
futures = { workspace = true }
reqwest-eventsource = "0.6"

# Database testing
sqlx = { workspace = true }
sqlx-db-tester = "0.6.0"

# NATS testing
async-nats = "0.41"
tokio-stream = { workspace = true }
async-stream = "0.3"

# Time handling
chrono = { workspace = true }

# Test utilities
tempfile = "3.10"
md5 = "0.7"
base64 = "0.22.1" 

# Local project dependencies
fechatter_core = { workspace = true }
fechatter_server = { path = "../fechatter_server", features = ["test-util"] }
notify_server = { workspace = true }
