[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = "0.41.0"
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
fechatter_core = { workspace = true }
fechatter_protos = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
prost = "0.14.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
# Metrics
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
metrics-util = "0.19.1"
