[package]
name = "swiftide-pgvector"
version = "0.1.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/swiftide-pgvector"
repository = "https://github.com/tyr-rust-bootcamp/aicomm"
homepage = "https://github.com/tyr-rust-bootcamp/aicomm"
description = "A library to use pgvector with Swiftide."

readme = "README.md"
categories = ["development-tools"]
keywords = ["pgvector", "postgres", "database"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
pgvector = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
swiftide-core = "0.13.3"
tracing = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
swiftide = { version = "0.13.3", features = ["tree-sitter", "openai"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
